# optimizer

./: .flake8  .gitignore  .travis.yml  README.md  build_modes.py  city_graph.py  draw.py  main.py  main_scipy.py  matrixod.py  requirements.txt  setup.cfg  setup.py  to_do.txt  transit_network.py
docs/: index.html
docs/optimization/preoptimization/: assignment.html
docs/sidermit/optimization/: index.html
docs/sidermit/publictransportsystem/: network.html  passenger.html
examples/: city_example.ipynb  examples_sidermit.ipynb  publicTransportSystem_example.ipynb
html/sidermit/: exceptions.html
html/sidermit/city/: demand.html  graph.html  index.html
inputs/: matriz.txt
sidermit/: demand.py  exceptions.py  extended_graph.py  graph.py  hyper_path.py  transport_mode.py  transport_network.py  transport_user.py
sidermit/city/: __init__.py  demand.py  graph.py
sidermit/optimization/: __init__.py  constrains.py  infrastructure_cost.py  operators_cost.py  optimizer.py  users_cost.py
sidermit/preoptimization/: __init__.py  assignment.py  extended_graph.py  hyper_path.py
sidermit/publictransportsystem/: __init__.py  mode.py  network.py  passenger.py
tests/: test_assignment.py  test_constrains.py  test_demand.py  test_extended_graph.py  test_graph.py  test_hyper_path.py  test_infrastructure_cost.py  test_operators_cost.py  test_transport_mode.py  test_transport_network.py  test_transport_user.py  test_users_cost.py
tests/file_tests/: test_NodeTypeExceptions.PAJEK  test_formatPajekExceptions.PAJEK  test_needCbdExceptions.PAJEK  test_nodeIdExceptions.PAJEK
(+32 files in other folders)
