[metadata]
name = sidermit
version = 1.0.0
description = Python library to analyze transport system with defined structure
long_description = file: README.rst
author = Felipe Vera
author_email = fvera@transapp.cl
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7